feat(tooling): add Spotless Maven plugin for automated code formatting
- Configure Spotless with Google Java Format style
- Add import ordering (java, javax, org, com, com.bigbrightpaints)
- Integrate formatting check into verify phase
- Apply formatting to all Java source files
- Document formatting commands in README and AGENTS.md

This improves code consistency and reduces style-related review friction.

Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>